WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32289
Mouse click count lost in WebMouseEventBuilder conversion
https://bugs.webkit.org/show_bug.cgi?id=32289
Summary
Mouse click count lost in WebMouseEventBuilder conversion
Stuart Morgan
Reported
2009-12-08 14:42:09 PST
WebMouseEventBuilder::WebMouseEventBuilder in WebInputEventConversion.cpp fails to pull the source event's "detail" field, which is where the click count is stored in MouseEvent, so all mouse events going through it end up with a clickCount of 0.
Attachments
Add clickCount to conversion
(1.15 KB, patch)
2009-12-08 15:06 PST
,
Stuart Morgan
fishd
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stuart Morgan
Comment 1
2009-12-08 15:06:26 PST
Created
attachment 44490
[details]
Add clickCount to conversion
WebKit Review Bot
Comment 2
2009-12-08 15:08:15 PST
style-queue ran check-webkit-style on
attachment 44490
[details]
without any errors.
WebKit Commit Bot
Comment 3
2009-12-09 08:41:06 PST
Comment on
attachment 44490
[details]
Add clickCount to conversion Rejecting patch 44490 from commit-queue. Unexpected failure when landing patch! Please file a bug against bugzilla-tool. Failed to run "['WebKitTools/Scripts/bugzilla-tool', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', '--quiet', '44490']" exit_code: 1 Last 500 characters of output: nd_handle_errors self.run() File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/modules/landingsequence.py", line 54, in run self.clean() File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/modules/landingsequence.py", line 81, in clean step.run() File "/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/modules/buildsteps.py", line 101, in run os.chdir(self._tool._scm.checkout_root) AttributeError: 'NoneType' object has no attribute 'checkout_root'
Darin Fisher (:fishd, Google)
Comment 4
2009-12-09 10:22:36 PST
Landed as
http://trac.webkit.org/changeset/51904
Eric Seidel (no email)
Comment 5
2009-12-09 11:36:55 PST
Sorry for the noise. Adam believes to have fixed the issue. I've restarted the commit bot.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug