2009-12-08  Stuart Morgan  <stuartmorgan@chromium.org>

Reviewed by Darin Fisher.

        Include clickCount when doing MouseEvent -> WebMouseEvent conversion
        in Chromium API.

        https://bugs.webkit.org/show_bug.cgi?id=32289

        * src/WebInputEventConversion.cpp:
        (WebKit::WebMouseEventBuilder::WebMouseEventBuilder):



git-svn-id: svn://svn.chromium.org/blink/trunk@51904 bbb929c8-8fbe-4397-9dbb-9b2b20218538