third_party/WebKit/WebKit/chromium/src/WebInputEventConversion.cpp
@@ -230,6 +230,7 @@ WebMouseEventBuilder::WebMouseEventBuilder(const ScrollView* view, const MouseEv
     windowY = p.y();
     x = event.offsetX();
     y = event.offsetY();
+    clickCount = event.detail();
 }
 
 WebKeyboardEventBuilder::WebKeyboardEventBuilder(const KeyboardEvent& event)
